Add AppLifecycle and HealthPlugin